--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 	<h1>Website Template</h1>
 	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	<ul>
+		<li><a href="./asg1/index.html">Assignment 1</a>a></li>
+		<li><a href="./asg2/index.html">Assignment 2</a>a></li>
+		<li><a href="./asg2/hero.html">Assignment 2: Hero</a>a></li>
+	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
 	<script src="./assets/js/main.js"></script>
