--- a/asg3/index.html
+++ b/asg3/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	<h1>Between Friends</h1>
+	<p>Indie band</p>
 
 <h2> This is the sub heading<h2>
 <img src="img/between-friends.jpg">
