created assignment 3 link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<li><a href="./asg1/index.html">Assignment 1</a>a></li>
 		<li><a href="./asg2/index.html">Assignment 2</a>a></li>
 		<li><a href="./asg2/hero.html">Assignment 2: Hero</a>a></li>
+		<li><a href="./asg3/index.html">Assignment 3: Favorite Band</a>a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
