--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<h1>Website Template</h1>
 	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
 	<ul>
-		<li><a href="./asg1/index.html">Assignment 1</a>a></li>
-		<li><a href="./asg2/index.html">Assignment 2</a>a></li>
-		<li><a href="./asg2/hero.html">Assignment 2: Hero</a>a></li>
-		<li><a href="./asg3/index.html">Assignment 3: Favorite Band</a>a></li>
+		<li><a href="./asg1/index.html">Assignment 1</a></li>
+		<li><a href="./asg2/index.html">Assignment 2</a></li>
+		<li><a href="./asg2/hero.html">Assignment 2: Hero</a></li>
+		<li><a href="./asg3/index.html">Assignment 3: Favorite Band</a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
