--- a/asg2/index.html
+++ b/asg2/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html lang=""en">
+<head>
+        <meta charset=""utf-8">
+        <title>Assignment 2<title>
+        <link rel="stylesheet" href="./assets/css/styles.css">
+</head>
