--- a/asg2/index.html
+++ b/asg2/index.html
@@ -1,7 +1,19 @@
-<!DOCTYPE html>
-<html lang=""en">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset=""utf-8">
-    <title>Assignment 2<title>
+    <meta charset="utf-8">
+    <title>Assignment 2</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+<body>
+
+
+    <h1>Assignment 2</h1>
+    <p>The web is in constant flux, so developers and designers must stay adaptable as tools, standards, and expectations evolve.</p>
+    <p>Building on web standards ensures long-term stability and accessibility, unlike many frameworks and hacks that may become outdated.</p>
+    <p>Creativity, experimentation, and sharing are fundamental to the spirit of the web and fuel its continuous innovation.</p>
+   
+   
+    <script src="./assets/js/main.js"></script>
+</body>
+</html>
