--- a/asg2/hero.html
+++ b/asg2/hero.html
@@ -2,10 +2,9 @@
 <html lang=""en">
 <head>
     <meta charset=""utf-8">
-    <title>Spiderman</title>title>
+    <title>Cat Woman</title>title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
-
 
 <body>
     <h1>Introducing my Hero Cat Woman</h1>
@@ -19,6 +18,9 @@
     <h3>Her Weaknesses</h3>
     <p>Despite having many strengths, Catwoman holds weakness in her emotional vulnerability. Her complicated relationship with Batman often clouds her judgement, leading her to make decisions based off of emotions rather than logic. Additionally, her fierce independency can become a liability when she refuses other peoples help during dangerous situations. She has protective instincts towards the innocent which allows the enemy to exploit and manipulate her emotions.</p>
     <h3>Why I Like Catwoman</h3>
-    <p>Catwoman is a very sophisticated character that holds complexity and authenticity. Rather than operating on a moral absolute, She exists in the gray areas of right and wrong that make her choices feel more human. Her humble beginnings of being a survival-focused thief to becoming a someone who genuinely cares about others reflects real personal growth.She embodies empowerment and agency, taking full accountability of her actions and refusing to be defined by other's expectations, making her the best superhero I know of.</p>    
+    <p>Catwoman is a very sophisticated character that holds complexity and authenticity. Rather than operating on a moral absolute, She exists in the gray areas of right and wrong that make her choices feel more human. Her humble beginnings of being a survival-focused thief to becoming a someone who genuinely cares about others reflects real personal growth.She embodies empowerment and agency, taking full accountability of her actions and refusing to be defined by other's expectations, making her the best superhero I know of.</p>  
+    <script src="./assets/js/main.js"></script>  
 </body>
 </html>
+
+
