--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Website Template</title>
+	<title>My Assignments</title>
 	<link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
 
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	<h1>Hain Song Internet Studio 1</h1>
+	<p>My Assignments will go up here</p>
 	<ul>
 		<li><a href="./asg1/index.html">Assignment 1</a></li>
 		<li><a href="./asg2/index.html">Assignment 2</a></li>
