--- a/asg3/favoriteband.html
+++ b/asg3/favoriteband.html
@@ -13,9 +13,9 @@
 <body>
 
 	<h1>Between Friends</h1>
-	<p>Indie band</p>
-
-<h2>This is the sub heading<h2>
+	<p>American alternative pop and indie</p>
+	<h2>Why They are my Favorite<h2>
+	<p>I really love their synth-infused, atmospheric sound that blends elements of '90s R&B, ambient synth-pop, and electronic music. A lot of their song lyrics often explore the themes of youth culture, relationships, and self-discovery in the internet age</p>
 <img src="img/between-friends.jpg">
        
 	
