--- a/asg3/favoriteband.html
+++ b/asg3/favoriteband.html
@@ -17,6 +17,14 @@
 	<h2>Why They are my Favorite<h2>
 	<p>I really love their synth-infused, atmospheric sound that blends elements of '90s R&B, ambient synth-pop, and electronic music. A lot of their song lyrics often explore the themes of youth culture, relationships, and self-discovery in the internet age</p>
 <img src="img/between-friends.jpg">
+	<a href="https://www.itsbetweenfriends.com/">link to their band</a>
+	<h2>Similar artists</h2>
+	<ul>
+        <li><a href="https://delwatergap.net/">Del Water Gap</a></li>
+        <li><a href="https://www.spilltab.net/">Spill Tab</a></li>
+        <li><a href="https://www.dominicfike.com/">Dominic Fike</a></li>
+        <li><a href="https://www.woozystill.com/#/">Still Woozy</a></li>
+    </ul>
        
 	
 </body>
