--- a/asg3/favoriteband.html
+++ b/asg3/favoriteband.html
@@ -27,7 +27,7 @@
         <li><a href="https://www.dominicfike.com/">Dominic Fike</a></li>
         <li><a href="https://www.woozystill.com/#/">Still Woozy</a></li>
     </ul>
-       
+<link href="styles.css" rel="stylesheet">
 	
 </body>
 </html>
