--- a/asg3/favoriteband.html
+++ b/asg3/favoriteband.html
@@ -16,7 +16,7 @@
 	<p>American alternative pop and indie</p>
 	<h2>Why They are my Favorite</h2>
 	<p>I really love their synth-infused, atmospheric sound that blends elements of '90s R&B, ambient synth-pop, and electronic music. A lot of their song lyrics often explore the themes of youth culture, relationships, and self-discovery in the internet age</p>
-<img src="img/between-friends.jpg">
+	<br><img src="img/between-friends.jpg">
 	<a href="https://www.itsbetweenfriends.com/">link to their band</a>
 	<h2>Similar artists</h2>
 	<ul>
