--- a/asg2/index.html
+++ b/asg2/index.html
@@ -9,9 +9,33 @@
 
 
     <h1>Assignment 2</h1>
-    <p>The web is in constant flux, so developers and designers must stay adaptable as tools, standards, and expectations evolve.</p>
-    <p>Building on web standards ensures long-term stability and accessibility, unlike many frameworks and hacks that may become outdated.</p>
-    <p>Creativity, experimentation, and sharing are fundamental to the spirit of the web and fuel its continuous innovation.</p>
+    <section>
+      <h2>What is the difference between structured content and semantic HTML?</h2>
+      <p>Structured content means organizing information into meaningful parts so that 
+          it can be reused and understood by both people and machines. Semantic HTML means 
+          using HTML tags that describe the meaning
+          of content instead of just controlling its appearance.
+      </p>
+    </section>
+    <section>
+      <h2>How do they work together?</h2>
+      <p>Structured content defines what the pieces of information are and how they relate.
+          Semantic HTML provides the standard markup to express those pieces on a webpage.
+          Together, they make content clear for humans, search engines, and smart assistants.
+      </p>
+    </section>
+
+    <section>
+      <h2>Why is it important to have both?</h2>
+      <ul>
+        <li>Improves accessibility for screen readers and assistive technologies.</li>
+        <li>Makes content machine-readable for search engines and voice assistants.</li>
+        <li>Ensures consistency and reusability across different platforms.</li>
+        <li>Helps future-proof your content for new devices and interfaces.</li>
+      </ul>
+    </section>
+
+
    
    
     <script src="./assets/js/main.js"></script>
