--- a/asg1/index.html
+++ b/asg1/index.html
@@ -15,7 +15,13 @@
 
 
     <h2>Semester Project: Local Study Spot Finder</h2> 
-    <p>For my semester project, I would like to create a website called "Study Haven" that helps students in Fort Worth find the perfect study locations based on their specific needs. The site would feature a database of local coffee shops, libraries, quiet restaurants, and other study-friendly venues, complete with detailed information about each location, including Wi-Fi quality, noise levels, outlet availability, operating hours, and whether food/drinks are allowed. Users could filter locations by criteria like "24-hour access," "group study friendly," or "complete silence required." Each location would have user-submitted photos, reviews, and real-time updates about crowding levels. This website addresses a real problem that many students face: spending valuable study time searching for the right environment instead of actually studying. By creating a centralized resource with reliable, student-focused information, Study Haven would help fellow students be more productive and make better use of their study time.</p>
+    <p>For my semester project, I would like to create a website called "Study Haven" that helps students in Fort Worth find the perfect study locations based on their specific needs. 
+        The site would feature a database of local coffee shops, libraries, quiet restaurants, and other study-friendly venues, complete with detailed information about each location, 
+        including Wi-Fi quality, noise levels, outlet availability, operating hours, and whether food/drinks are allowed. Users could filter locations by criteria like "24-hour access," 
+        "group study friendly," or "complete silence required." Each location would have user-submitted photos, reviews, and real-time updates about crowding levels. 
+        This website addresses a real problem that many students face: spending valuable study time searching for the right environment instead of actually studying. 
+        By creating a centralized resource with reliable, student-focused information, Study Haven would help fellow students be more productive and make better use of their study time.
+    </p>
 
 
    
