--- a/asg2/index.html
+++ b/asg2/index.html
@@ -28,7 +28,27 @@
         <li>Ensures consistency and reusability across different platforms.</li>
         <li>Helps future-proof your content for new devices and interfaces.</li>
       </ul>
- 
+ <section>
+  <h2>Similar Websites to My Semester Project Idea</h2>
+  <p>
+    My semester project, "Study Haven" will help students in Fort Worth
+    find the best study spots based on Wi-Fi quality, noise levels, and outlet availability. 
+    and other factors. Here are three websites that are similar to my website idea:
+  </p>
+  <ul>
+    <li>
+      <a href="https://studynearme.com">Study Near Me</a> 
+    </li>
+    <li>
+      <a href="https://laptopfriendlycafe.com">Laptop Friendly Cafes</a>
+    </li>
+    <li>
+      <a href="https://studyspaces.umich.edu">Study Spaces at UM</a>  
+    </li>
+  </ul>
+
+</section>
+
 
 
    
