--- a/asg2/index.html
+++ b/asg2/index.html
@@ -49,9 +49,34 @@
 
 </section>
 
+<section>
+  <h2>Required Readings Reflection</h2>
+    
+    <h3>Banishing Your Inner Critic (Denise Jacobs)</h3>
+    <p>
+      Jacobs describes the inner critic as a troll that blocks creativity. The method that would 
+      be most successful for me is reframing negative thoughts into positive ones. This helps 
+      me overcome overthinking and stay productive during creative work.
+    </p>
 
+    <h3>Procrastination (David McRaney)</h3>
+    <p>
+      Hyperbolic discounting is the tendency to prefer smaller, immediate rewards over larger, 
+      delayed rewards. One method to counteract this is to break big tasks into smaller, 
+      manageable steps with immediate deadlines. This would work best for me because I am 
+      motivated by completing smaller tasks and seeing progress quickly.
+    </p>
 
-   
+    <h3>Critical Web Design: Chapter 1</h3>
+    <p>
+      Critical Web Design identifies four types of power in networks: network-making, gatekeeping, 
+      protocol, and programming power. As a creator and publisher of my work, I have network-making 
+      power because I can design and share content that connects with users. I do not have protocol 
+      power, as I cannot define technical standards for the web.
+    </p>
+    
+</section>
+
    
     <script src="./assets/js/main.js"></script>
 </body>
