--- a/asg2/hero.html
+++ b/asg2/hero.html
@@ -8,7 +8,8 @@
 
 <body>
     <h1>Introducing my Hero Cat Woman</h1>
-
+    <img src=>
+    <a href="https://en.wikipedia.org/wiki/Catwoman" target="_blank">Wikipedia: Catwoman</a>.
 
     <h2>About Cat Woman</h2>
 
