--- a/asg2/hero.html
+++ b/asg2/hero.html
@@ -2,7 +2,7 @@
 <html lang=""en">
 <head>
     <meta charset=""utf-8">
-    <title>Cat Woman</title>title>
+    <title>Cat Woman</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
