--- a/asg2/hero.html
+++ b/asg2/hero.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Introducing my Hero Cat Woman</h1>
 
-    <img src="assets/img/catwoman.jpg" alt="">
+    <img src="./img/catwoman.jpg" alt="Image of Catwoman">
     <a href="https://en.wikipedia.org/wiki/Catwoman" target="_blank">Wikipedia: Catwoman</a>.
 
     <h2>About Cat Woman</h2>
