--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="./asg2/index.html">Assignment 2</a></li>
 		<li><a href="./asg2/hero.html">Assignment 2: Hero</a></li>
 		<li><a href="./asg3/favoriteband.html">Assignment 3: Favorite Band</a></li>
+		<li><a href="./asg3/index.html">Assignment 3: Part 2</a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
