--- a/asg3/index.html
+++ b/asg3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Favorite Band</title>
+	<title>Reading Questions</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700	&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -12,19 +12,25 @@
 </head>
 <body>
 
-	<h1>Between Friends</h1>
-	<p>American alternative pop and indie</p>
-	<h2>Why They are my Favorite</h2>
-	<p>I really love their synth-infused, atmospheric sound that blends elements of '90s R&B, ambient synth-pop, and electronic music. A lot of their song lyrics often explore the themes of youth culture, relationships, and self-discovery in the internet age</p>
-	<br><img src="img/between-friends.jpg">
-	<a href="https://www.itsbetweenfriends.com/">link to their band</a>
-	<h2>Similar artists</h2>
-	<ul>
-        <li><a href="https://delwatergap.net/">Del Water Gap</a></li>
-        <li><a href="https://www.spilltab.net/">Spill Tab</a></li>
-        <li><a href="https://www.dominicfike.com/">Dominic Fike</a></li>
-        <li><a href="https://www.woozystill.com/#/">Still Woozy</a></li>
-    </ul>
+	<h1>Assignment 3</h1>
+	<p>Reading Questions</p>
+	<h2>Question One</h2>
+	<p>This website doesn't keep their clickable elements consistent, which can be misleading when searching for where to click. 
+		Sometimes it can be the photos or the underlined text. This website sparked controversy in the past before because of it's UI consistency problems. 
+		Below is an example for a violation of number 6
+	</p>
+	<a href="https://ellentracy.com/">example of a violation of #6</a>
+	<h2>Question 2</h2>
+	<p>Stories create clarity because you define the user, problem, solution, and outcome.
+		This exposes gaps in logic and questionable assumptions. 
+		Stories also show the "why" behind decisions, not just the "what". 
+		You communicate the rationale behind design decisions through human-centered scenarios. This approach makes your proposals more compelling 
+		and easier to understand, as people can see not just what you're building, but why it matters to real users.
+		You can also become capable of empathizing with users through stories for a better understanding of the emotional side of the experience.
+	</p>
+	<h2>Question 3</h2>
+	<p>Hierarchy can be established by size, weight, color, style and placement. Below is an example.</p>
+	<a href="https://www.apple.com/shop/accessories/all/beats-featured/">Example of good hierarchy</a>
 
 </body>
 </html>
