--- a/asg3/index.html
+++ b/asg3/index.html
@@ -31,6 +31,58 @@
 	<h2>Question 3</h2>
 	<p>Hierarchy can be established by size, weight, color, style and placement. Below is an example.</p>
 	<a href="https://www.apple.com/shop/accessories/all/beats-featured/">Example of good hierarchy</a>
+	<br>
+	<h1>Creative brief</h1>
+	<br>
+	<table border="1">
+	<tr>
+		<td>Project Name</td>
+		<td>Study Haven Launch Project</td>
+	</tr>
+	<tr>
+		<td>Project Timeline</td>
+		<td>01/15/2025 - 05/15/2025</td>
+	</tr>
+	</table>
+
+	<table border="1">
+	<tr>
+		<td>Project Overview</td>
+	</tr>
+	<tr>
+		<td>What problem are we solving? How?<br>
+			Students in Fort Worth waste valuable study time searching for appropriate study locations. 
+			Study Haven solves this by creating a centralized database of student-focused study spaces with detailed filtering options.
+			<br><br>
+
+			Why are we solving this problem? What's the benefit?<br>
+			This improves student productivity and academic success by eliminating the frustration of location hunting. 
+			Students can focus their energy on actual studying rather than logistics.<br><br>
+
+			How does this problem align with our product/service?<br>
+			Study Haven directly addresses the gap in location discovery tools by providing student specific criteria like Wi-Fi quality, 
+			noise levels, and real-time crowding updates that generic apps don't offer.
+		</td>
+	</tr>
+	</table>
+
+	<table border="1">
+	<tr>
+		<td>Project Deliverables & Scope</td>
+	</tr>
+	<tr>
+		<td>What are the deliverables for this project?<br>
+			Fully functional website with location database, user review system, real-time updates feature, mobile-responsive design, 
+			and initial database of 25+ Fort Worth study locations.<br><br>
+
+			Do we anticipate any internal/external factors compromising the completion of the above deliverables? If so, how? Why?<br>
+			Potential challenges include gathering initial location data, encouraging early user adoption for reviews, and maintaining real-time update accuracy. 
+			Mitigation involves partnering with student organizations and creating incentives for user contributions.<br><br>
+
+		
+		</td>
+	</tr>
+	</table>
 
 </body>
 </html>
