--- a/asg3/index.html
+++ b/asg3/index.html
@@ -41,7 +41,7 @@
 	</tr>
 	<tr>
 		<td>Project Timeline</td>
-		<td>01/15/2025 - 05/15/2025</td>
+		<td>09/01/2025 - /15/2025</td>
 	</tr>
 	</table>
 
@@ -51,7 +51,7 @@
 	</tr>
 	<tr>
 		<td>What problem are we solving? How?<br>
-			Students in Fort Worth waste valuable study time searching for appropriate study locations. 
+			Students in Dallas waste valuable study time searching for appropriate study locations. 
 			Study Haven solves this by creating a centralized database of student-focused study spaces with detailed filtering options.
 			<br><br>
 
@@ -68,21 +68,75 @@
 
 	<table border="1">
 	<tr>
-		<td>Project Deliverables & Scope</td>
+		<td>Audience</td>
 	</tr>
 	<tr>
-		<td>What are the deliverables for this project?<br>
-			Fully functional website with location database, user review system, real-time updates feature, mobile-responsive design, 
-			and initial database of 25+ Fort Worth study locations.<br><br>
-
-			Do we anticipate any internal/external factors compromising the completion of the above deliverables? If so, how? Why?<br>
-			Potential challenges include gathering initial location data, encouraging early user adoption for reviews, and maintaining real-time update accuracy. 
-			Mitigation involves partnering with student organizations and creating incentives for user contributions.<br><br>
-
-		
+		<td>Primary: College students in Dallas (ages 18-25) who study outside their dorms, including commuter students, graduate students, and those seeking collaborative or quiet study environments.<br><br>
+			Secondary: High school students preparing for college exams, working professionals pursuing certifications or continuing education, and remote workers seeking productive spaces outside the home.
 		</td>
 	</tr>
 	</table>
+
+	<table border="1">
+	<tr>
+		<td>Competition</td>
+	</tr>
+	<tr>
+		<td>University Study Finders (campus-specific tools like UMN's Study Space Finder, limited to single institutions), Google Maps/Yelp (general location data, no study-specific filtering), Study Blog Lists (static articles about "Best Study Spots," outdated information), Virtual Study Spaces (Virtual Cafe and aesthetic study websites, solve ambiance but not physical space discovery).
+		</td>
+	</tr>
+	</table>
+
+	<table border="1">
+	<tr>
+		<td>Key Messages</td>
+	</tr>
+	<tr>
+		<td><strong>Pain Point:</strong> You waste 30+ minutes every study session just finding a decent spot with the right noise level, Wi-Fi, and available seating.<br><br>
+			<strong>Experience Without Pain:</strong> Imagine knowing exactly where to go based on your specific study needs - whether you need complete silence or group collaboration space - before you even leave home.<br><br>
+			<strong>Benefit:</strong> You arrive ready to focus, with 2+ extra hours of productive study time each week and improved academic performance.<br><br>
+			<strong>"So What?":</strong> Dallas students can reclaim hours of lost study time and actually improve their grades instead of wandering around campus looking for the perfect spot.
+	</td>
+		</tr>
+	</table>
+
+	<table border="1">
+	<tr>
+		<td>Call to Action</td>
+	</tr>
+	<tr>
+		<td>Primary: "Find My Study Spot" - Leads users directly to the search/filter interface<br><br>
+			Secondary: "Add a Location," "Leave a Review," "Update Status," "Save Favorites"
+		</td>
+	</tr>
+	</table>
+
+	<table border="1">
+	<tr>
+		<td>How to Measure Success</td>
+	</tr>
+	<tr>
+		<td><strong>Primary Success Metrics:</strong><br>
+			- Strong user adoption within first semester<br>
+			- High conversion rate from searches to location visits<br>
+			- Comprehensive database of verified Dallas study locations<br><br>
+			<strong>Quality Indicators:</strong><br>
+			- Excellent user ratings for location accuracy<br>
+			- Strong user retention and repeat visits<br>
+			- Active community engagement through reviews and updates<br><br>
+			<strong>Project Impact:</strong><br>
+			- Significant reduction in time spent finding study spaces<br>
+			- Improved study productivity reported by users<br>
+			- Active participation from local venues and libraries<br><br>
+			<strong>Timeline Milestones:</strong><br>
+			- Early launch with core location database<br>
+			- Steady user growth and location expansion<br>
+			- Sustainable platform with strong community engagement
+		</td>
+	</tr>
+	</table>
+
+	
 
 </body>
 </html>
