--- a/asg3/index.html
+++ b/asg3/index.html
@@ -50,16 +50,16 @@
 		<td>Project Overview</td>
 	</tr>
 	<tr>
-		<td>What problem are we solving? How?<br>
+		<td><strong>What problem are we solving? How?</strong><br>
 			Students in Dallas waste valuable study time searching for appropriate study locations. 
 			Study Haven solves this by creating a centralized database of student-focused study spaces with detailed filtering options.
 			<br><br>
 
-			Why are we solving this problem? What's the benefit?<br>
+			<strong>Why are we solving this problem? What's the benefit?</strong><br>
 			This improves student productivity and academic success by eliminating the frustration of location hunting. 
 			Students can focus their energy on actual studying rather than logistics.<br><br>
 
-			How does this problem align with our product/service?<br>
+			<strong>How does this problem align with our product/service?</strong><br>
 			Study Haven directly addresses the gap in location discovery tools by providing student specific criteria like Wi-Fi quality, 
 			noise levels, and real-time crowding updates that generic apps don't offer.
 		</td>
@@ -70,9 +70,9 @@
 	<tr>
 		<td>Audience</td>
 	</tr>
-	<tr>
-		<td>Primary: College students in Dallas (ages 18-25) who study outside their dorms, including commuter students, graduate students, and those seeking collaborative or quiet study environments.<br><br>
-			Secondary: High school students preparing for college exams, working professionals pursuing certifications or continuing education, and remote workers seeking productive spaces outside the home.
+	<tr> 
+		<td><strong>Primary:</strong> College students in Dallas (ages 18-25) who study outside their dorms, including commuter students, graduate students, and those seeking collaborative or quiet study environments.<br><br>
+			<strong>Secondary:</strong> High school students preparing for college exams, working professionals pursuing certifications or continuing education, and remote workers seeking productive spaces outside the home.
 		</td>
 	</tr>
 	</table>
@@ -105,8 +105,8 @@
 		<td>Call to Action</td>
 	</tr>
 	<tr>
-		<td>Primary: "Find My Study Spot" - Leads users directly to the search/filter interface<br><br>
-			Secondary: "Add a Location," "Leave a Review," "Update Status," "Save Favorites"
+		<td><strong>Primary:</strong> "Find My Study Spot" - Leads users directly to the search/filter interface<br><br>
+			<strong>Secondary:</strong> "Add a Location," "Leave a Review," "Update Status," "Save Favorites"
 		</td>
 	</tr>
 	</table>
