--- a/asg4/index.html
+++ b/asg4/index.html
@@ -26,5 +26,22 @@
         <li><a href="https://www.woozystill.com/#/">Still Woozy</a></li>
     </ul>
 
+	<table border="1">
+    <tr>
+      <th></th>
+      <th>Col 1</th>
+      <th>Col 2</th>
+    </tr>
+    <tr>
+      <th>Row 1</th>
+      <td>1,1</td>
+      <td>1,2</td>
+    </tr>
+    <tr>
+      <th>Row 2</th>
+      <td>2,1</td>
+      <td>2,2</td>
+    </tr>
+	</table>
 </body>
 </html>
