--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 	<p>My Assignments will go up here</p>
 	<ul>
 		<li><a href="./asg1/index.html">Assignment 1</a></li>
-		<li><a href="./asg2/index.html">Assignment 2</a></li>
+		<br>
 		<li><a href="./asg2/hero.html">Assignment 2: Hero</a></li>
+		<li><a href="./asg2/index.html">Assignment 2</a></li>
+		<br>
 		<li><a href="./asg3/favoriteband.html">Assignment 3: Favorite Band</a></li>
 		<li><a href="./asg3/index.html">Assignment 3</a></li>
+		<br>
+		<li><a href="./asg4/index.html">Assignment 4: Least Favorite Band</a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
