--- a/asg4/index.html
+++ b/asg4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Favorite Band</title>
+	<title>Least Favorite Band</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700	&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
