--- a/asg4/index.html
+++ b/asg4/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Least Favorite Band</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700	&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
@@ -12,36 +12,57 @@
 </head>
 <body>
 
-	<h1>Between Friends</h1>
-	<p>American alternative pop and indie</p>
-	<h2>Why They are my Favorite</h2>
-	<p>I really love their synth-infused, atmospheric sound that blends elements of '90s R&B, ambient synth-pop, and electronic music. A lot of their song lyrics often explore the themes of youth culture, relationships, and self-discovery in the internet age</p>
-	<br><img src="img/between-friends.jpg">
-	<a href="https://www.itsbetweenfriends.com/">link to their band</a>
-	<h2>Similar artists</h2>
-	<ul>
-        <li><a href="https://delwatergap.net/">Del Water Gap</a></li>
-        <li><a href="https://www.spilltab.net/">Spill Tab</a></li>
-        <li><a href="https://www.dominicfike.com/">Dominic Fike</a></li>
-        <li><a href="https://www.woozystill.com/#/">Still Woozy</a></li>
-    </ul>
-
+	<h1>Nickelback</h1>
+	<p>Canadian Rockband</p>
+	
+	<div>
+		<h2>About the Band</h2>
+		<p>Nickelback is a Canadian rock band formed in 1995 in Alberta. The band consists of
+			<span>Chad Kroeger</span> who is the lead vocal and plays guitar, <span>Ryan Peake</span> who is backing vocals but also plays guitar, 
+			<span>Mike Kroeger</span> whom takes the role of playing bass, and <span>Daniel Adair</span> who is the drummer of the band.
+		</p>
+	</div>
+	
+	<div>
+		<h2>3 Better artists</h2>
+		<ul>
+			<li><span></span></li>
+			<li><span></span></li>
+			<li><span></span></li>
+		</ul>
+	</div>
+	
+	<div>
+		<h2>External Links</h2>
+		<p>Visit their official website: <a href="https://www.nickelback.com" target="_blank">Nickelback.com</a>
+		</p>
+	</div>
+	
 	<table border="1">
-    <tr>
-      <th></th>
-      <th>Col 1</th>
-      <th>Col 2</th>
-    </tr>
-    <tr>
-      <th>Row 1</th>
-      <td>1,1</td>
-      <td>1,2</td>
-    </tr>
-    <tr>
-      <th>Row 2</th>
-      <td>2,1</td>
-      <td>2,2</td>
-    </tr>
+		<tr>
+			<th>Header 1</th>
+			<th>Header 2</th>
+			<th>Header 3</th>
+			<th>Header 4</th>
+		</tr>
+		<tr>
+			<td>Row 1, Col 1</td>
+			<td>Row 1, Col 2</td>
+			<td>Row 1, Col 3</td>
+			<td>Row 1, Col 4</td>
+		</tr>
+		<tr>
+			<td>Row 2, Col 1</td>
+			<td>Row 2, Col 2</td>
+			<td>Row 2, Col 3</td>
+			<td>Row 2, Col 4</td>
+		</tr>
+		<tr>
+			<td>Row 3, Col 1</td>
+			<td>Row 3, Col 2</td>
+			<td>Row 3, Col 3</td>
+			<td>Row 3, Col 4</td>
+		</tr>
 	</table>
 </body>
 </html>
