--- a/asg4/index.html
+++ b/asg4/index.html
@@ -26,9 +26,9 @@
 	<div>
 		<h2>3 Better artists</h2>
 		<ul>
-			<li><span></span></li>
-			<li><span></span></li>
-			<li><span></span></li>
+			<li><span>Coldplay</span></li>
+			<li><span>Queen</span></li>
+			<li><span>Maroon 5</span></li>
 		</ul>
 	</div>
 	
