--- a/asg4/index.html
+++ b/asg4/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+	
 	<h1>Nickelback</h1>
 	<p>Canadian Rockband</p>
 	
@@ -20,6 +20,11 @@
 		<p>Nickelback is a Canadian rock band formed in 1995 in Alberta. The band consists of
 			<span>Chad Kroeger</span> who is the lead vocal and plays guitar, <span>Ryan Peake</span> who is backing vocals but also plays guitar, 
 			<span>Mike Kroeger</span> whom takes the role of playing bass, and <span>Daniel Adair</span> who is the drummer of the band.
+		</p>
+	</div>
+	<div>
+		<h2>External Links</h2>
+		<p>Visit their official website: <a href="https://www.nickelback.com" target="_blank">Nickelback.com</a>
 		</p>
 	</div>
 	
@@ -32,18 +37,14 @@
 		</ul>
 	</div>
 	
-	<div>
-		<h2>External Links</h2>
-		<p>Visit their official website: <a href="https://www.nickelback.com" target="_blank">Nickelback.com</a>
-		</p>
-	</div>
+
 	
 	<table border="1">
 		<tr>
-			<th>Header 1</th>
-			<th>Header 2</th>
-			<th>Header 3</th>
-			<th>Header 4</th>
+			<th>Song title</th>
+			<th><strong>How You Remind Me</strong></th>
+			<th><strong>Photograph</strong></th>
+			<th><strong>Rockstar</strong></th>
 		</tr>
 		<tr>
 			<td>Row 1, Col 1</td>
