--- a/asg4/index.html
+++ b/asg4/index.html
@@ -47,21 +47,18 @@
 			<th><strong>Rockstar</strong></th>
 		</tr>
 		<tr>
-			<td>Row 1, Col 1</td>
-			<td>Row 1, Col 2</td>
-			<td>Row 1, Col 3</td>
+			<td>Year produced</td>
+			<td>Rating</td>
 		
 		</tr>
 		<tr>
 			<td>Row 2, Col 1</td>
 			<td>Row 2, Col 2</td>
-			<td>Row 2, Col 3</td>
 		
 		</tr>
 		<tr>
 			<td>Row 3, Col 1</td>
 			<td>Row 3, Col 2</td>
-			<td>Row 3, Col 3</td>
 			
 		</tr>
 	</table>
