--- a/asg4/index.html
+++ b/asg4/index.html
@@ -48,17 +48,17 @@
 		</tr>
 
 		<tr>
-			<td>Row 1, Col 1</td>
-			<td>Row 1, Col 2</td>
-			<td>Row 1, Col 3</td>
-			<td>Row 1, Col 4</td>
+			<td>Year Produced</td>
+			<td>2001</td>
+			<td>2005</td>
+			<td>2005</td>
 		
 		</tr>
 		<tr>
-			<td>Row 2, Col 1</td>
-			<td>Row 2, Col 2</td>
-			<td>Row 2, Col 3</td>
-			<td>Row 1, Col 4</td>
+			<td>Rating</td>
+			<td>6.5/10</td>
+			<td>4/10</td>
+			<td>6.5/10</td>
 		
 		</tr>
 	
