--- a/asg4/index.html
+++ b/asg4/index.html
@@ -18,12 +18,12 @@
 	<div>
 		<h2>About the Band</h2>
 		<p>Nickelback is a Canadian rock band formed in 1995 in Alberta. The band consists of
-			<span>Chad Kroeger</span> who is the lead vocal and plays guitar, <span>Ryan Peake</span> who is backing vocals but also plays guitar, 
-			<span>Mike Kroeger</span> whom takes the role of playing bass, and <span>Daniel Adair</span> who is the drummer of the band.
+			<span style-"color: blue;">Chad Kroeger</span> who is the lead vocal and plays guitar, <span style="color: blue">Ryan Peake</span> who is backing vocals but also plays guitar, 
+			<span style="color: blue">Mike Kroeger</span> whom takes the role of playing bass, and <span style="color: blue">Daniel Adair</span> who is the drummer of the band.
 		</p>
 	</div>
 	<div>
-		<h2>External Links</h2>
+		<br><img src="img/nickelback.jpg">
 		<p>Visit their official website: <a href="https://www.nickelback.com" target="_blank">Nickelback.com</a>
 		</p>
 	</div>
@@ -31,9 +31,9 @@
 	<div>
 		<h2>3 Better artists</h2>
 		<ul>
-			<li><span>Coldplay</span></li>
-			<li><span>Queen</span></li>
-			<li><span>Maroon 5</span></li>
+			<li>Coldplay</li>
+			<li>Queen</li>
+			<li>Maroon 5</li>
 		</ul>
 	</div>
 	
