--- a/asg4/index.html
+++ b/asg4/index.html
@@ -18,7 +18,7 @@
 	<div>
 		<h2>About the Band</h2>
 		<p>Nickelback is a Canadian rock band formed in 1995 in Alberta. The band consists of
-			<span style-"color: blue;">Chad Kroeger</span> who is the lead vocal and plays guitar, <span style="color: blue">Ryan Peake</span> who is backing vocals but also plays guitar, 
+			<span style-"color: blue">Chad Kroeger</span> who is the lead vocal and plays guitar, <span style="color: blue">Ryan Peake</span> who is backing vocals but also plays guitar, 
 			<span style="color: blue">Mike Kroeger</span> whom takes the role of playing bass, and <span style="color: blue">Daniel Adair</span> who is the drummer of the band.
 		</p>
 	</div>
