--- a/asg4/index.html
+++ b/asg4/index.html
@@ -11,58 +11,5 @@
 
 </head>
 <body>
-	
-	<h1>Nickelback</h1>
-	<p>Canadian Rockband</p>
-	
-	<div>
-		<h2>About the Band</h2>
-		<p>Nickelback is a Canadian rock band formed in 1995 in Alberta. The band consists of
-			<span style="color: blue">Chad Kroeger</span> who is the lead vocal and plays guitar, <span style="color: blue">Ryan Peake</span> who is backing vocals but also plays guitar, 
-			<span style="color: blue">Mike Kroeger</span> whom takes the role of playing bass, and <span style="color: blue">Daniel Adair</span> who is the drummer of the band.
-		</p>
-	</div>
-	<div>
-		<br><img src="img/nickelback.jpg">
-		<p>Visit their official website: <a href="https://www.nickelback.com" target="_blank">Nickelback.com</a>
-		</p>
-	</div>
-	
-	<div>
-		<h2>3 Better artists</h2>
-		<ul>
-			<li>Coldplay</li>
-			<li>Queen</li>
-			<li>Maroon 5</li>
-		</ul>
-	</div>
-	
-	<div>
-		<h2>3 of Nickelback's WORST Songs</h2>
-		<table border="1">
-			<tr>
-				<th>Song title</th>
-				<th><strong>How You Remind Me</strong></th>
-				<th><strong>Photograph</strong></th>
-				<th><strong>Rockstar</strong></th>
-			</tr>
-
-			<tr>
-				<td>Year Produced</td>
-				<td>2001</td>
-				<td>2005</td>
-				<td>2005</td>
-		
-			</tr>
-			<tr>
-				<td>Rating</td>
-				<td>6.5/10</td>
-				<td>4/10</td>
-				<td>6.5/10</td>
-		
-			</tr>
-	
-		</table>
-	</div>
-</body>
-</html>
+    <h1>Creative Brief Sitemap</h1>
+    <br><img src="img/sitemap.jpg">
