--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 		<li><a href="./asg3/favoriteband.html">Assignment 3: Favorite Band</a></li>
 		<li><a href="./asg3/index.html">Assignment 3</a></li>
 		<br>
-		<li><a href="./asg4/index.html">Assignment 4: Least Favorite Band</a></li>
+		<li><a href="./asg4/leastfavoriteband.html">Assignment 4: Least Favorite Band</a></li>
+		<li><a href="./asg4/index.html">Assignment 4</a></li>
 	</ul>
 	<img src="assets/img/cat.jpg" alt="">
 
