--- a/index.html
+++ b/index.html
@@ -2,26 +2,70 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>My Assignments</title>
+	<title>Hain Song | Personal Home Page</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+	<div class="container">
+		<header>
+            <h1>Hain Song</h1>
+            <p class="tagline">Future UX & Product Designer</p>
+        </header>
 
-	<h1>Hain Song Internet Studio 1</h1>
-	<p>My Assignments will go up here</p>
-	<ul>
-		<li><a href="./asg1/index.html">Assignment 1</a></li>
-		<br>
-		<li><a href="./asg2/hero.html">Assignment 2: Hero</a></li>
-		<li><a href="./asg2/index.html">Assignment 2</a></li>
-		<br>
-		<li><a href="./asg3/favoriteband.html">Assignment 3: Favorite Band</a></li>
-		<li><a href="./asg3/index.html">Assignment 3</a></li>
-		<br>
-		<li><a href="./asg4/index.html">Assignment 4: Least Favorite Band</a></li>
-		<li><a href="./asg4/sitemap.html">Assignment 4: Sitemap</a></li>
-	</ul>
-	<img src="assets/img/cat.jpg" alt="">
+        <div class="content">
+            <div class="main-content">
+                <section class="card image-section">
+                    <h2>My Favorite Flower</h2>
+                    <img src="https://images.unsplash.com/photo-1606041008023-472dfb5e530f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Beautiful daisies" class="flower-img">
+                    <p class="caption">"I love daisies" - Their simplicity and beauty inspire me.</p>
+                </section>
+
+                <section class="card about-section">
+                    <h2>About Me</h2>
+                    <p>Hello! I'm Hain Song, a creative individual with a passion for design and aesthetics. My journey is focused on blending functionality with beauty in digital experiences.</p>
+                    
+                    <div class="goals">
+                        <h3>My Goal</h3>
+                        <p>To become a future UX Designer and Product Designer, creating intuitive and beautiful digital experiences that solve real problems for users.</p>
+                    </div>
+                </section>
+            </div>
+
+            <div class="sidebar">
+                <section class="card hobbies-section">
+                    <h2>My Hobbies</h2>
+                    <ul class="hobbies-list">
+                        <li>Pottery - Creating tangible art with my hands</li>
+                        <li>Gaming - Valorant, Roblox, Stardew Valley</li>
+                        <li>Clothes Shopping - Visiting select shops, designer, and vintage!</li>
+                    </ul>
+                </section>
+
+                <section class="card assignments-section">
+                    <h2>My Assignments</h2>
+                    <ul class="assignment-list">
+							<li><a href="./asg1/index.html">Assignment 1</a></li>
+							<br>
+							<li><a href="./asg2/hero.html">Assignment 2: Hero</a></li>
+							<li><a href="./asg2/index.html">Assignment 2</a></li>
+							<br>
+							<li><a href="./asg3/favoriteband.html">Assignment 3: Favorite Band</a></li>
+							<li><a href="./asg3/index.html">Assignment 3</a></li>
+							<br>
+							<li><a href="./asg4/index.html">Assignment 4: Least Favorite Band</a></li>
+							<li><a href="./asg4/sitemap.html">Assignment 4: Sitemap</a></li>
+	
+                    </ul>
+                </section>
+        </div>
+
+        <footer>
+            <p>© 2023 Hain Song | Designed with care and attention to detail</p>
+        </footer>
+    </div>
 
 	<script src="./assets/js/main.js"></script>
 </body>
