--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <section class="card image-section">
                     <h2>My Favorite Flower</h2>
                     <img src="https://images.unsplash.com/photo-1606041008023-472dfb5e530f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Beautiful daisies" class="flower-img">
-                    <p class="caption">"I love daisies" - Their simplicity and beauty inspire me.</p>
+                    <p class="caption">I love daisies, Their simplicity and beauty inspire me.</p>
                 </section>
 
                 <section class="card about-section">
