--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Hain Song | Personal Home Page</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dosis:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
