--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<br>
 							<li><a href="./asg4/index.html">Assignment 4: Least Favorite Band</a></li>
 							<li><a href="./asg4/sitemap.html">Assignment 4: Sitemap</a></li>
+							<li><a href="./asg5/dinner-invitation.html">Assignment 5: Dinner Invitation</a></li>
 	
                     </ul>
                 </section>
